# hestia

./: Cargo.toml  README.md
example/command/: aeloss_pull.tcl  aeloss_push.tcl  gemm.tcl  spmv.tcl  stencil2d.tcl  stencil3d.tcl
example/data/: convert.py  generate_data.py  stencil_op_0.txt  stencil_op_2.txt
example/data/aeloss_pull/: 0.txt  1.txt  2.txt  in_0.txt  in_1.txt  in_2.txt
example/data/spmv/: 1.txt  2.txt  in_1.txt
example/json/aeloss_pull/: hec.json  hec_dyn.json  scf.json  tor.json
example/json/aeloss_push/: hec.json  hec_dyn.json  scf.json  tor.json
example/json/gemm/: hec.json  scf.json  tor.json
example/json/spmv/: hec.json  scf.json  tor.json
example/json/stencil2d/: hec.json  hec_dyn.json  scf.json  tor.json
example/json/stencil3d/: hec.json  scf.json  tor.json
set_value_derive/: Cargo.toml
set_value_derive/src/: lib.rs
src/: main.rs
src/lib/: basetype.rs  common.rs  elastic.rs  env.rs  equal.rs  hec.rs  mod.rs  software.rs  tor.rs
