[package]
name = "hector-debugger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
lazy_static = "1.4.0"
multimap = "0.9.0"
downcast-rs = "1.2.0"
set_value_derive = { path = "./set_value_derive" }
